// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing methods CreateApplication 1`] = `
[
  {
    "channel": "Web",
    "data": {
      "Currency": "EUR",
      "PushURL": "https://example.com/push",
      "ReturnURL": "https://example.com/return",
      "Services": {
        "ServiceList": [
          {
            "Action": "CreateApplication",
            "Name": "buckaroovoucher",
            "Parameters": [
              {
                "Name": "UsageType",
                "Value": 1,
              },
              {
                "Name": "ValidFrom",
                "Value": "2026-01-01",
              },
              {
                "Name": "ValidUntil",
                "Value": "2026-02-01",
              },
              {
                "Name": "CreationBalance",
                "Value": 12,
              },
            ],
            "Version": 0,
          },
        ],
      },
      "ServicesSelectableByClient": "",
    },
    "method": "POST",
    "path": "/json/DataRequest",
  },
]
`;

exports[`testing methods DeactivateVoucher 1`] = `
[
  {
    "channel": "Web",
    "data": {
      "Currency": "EUR",
      "PushURL": "https://example.com/push",
      "ReturnURL": "https://example.com/return",
      "Services": {
        "ServiceList": [
          {
            "Action": "DeactivateVoucher",
            "Name": "buckaroovoucher",
            "Parameters": [
              {
                "Name": "VoucherCode",
                "Value": "test-voucherCode",
              },
            ],
            "Version": 0,
          },
        ],
      },
      "ServicesSelectableByClient": "",
    },
    "method": "POST",
    "path": "/json/DataRequest",
  },
]
`;

exports[`testing methods GetBalance 1`] = `
[
  {
    "channel": "Web",
    "data": {
      "Currency": "EUR",
      "PushURL": "https://example.com/push",
      "ReturnURL": "https://example.com/return",
      "Services": {
        "ServiceList": [
          {
            "Action": "GetBalance",
            "Name": "buckaroovoucher",
            "Parameters": [
              {
                "Name": "VoucherCode",
                "Value": "test-voucherCode",
              },
            ],
            "Version": 0,
          },
        ],
      },
      "ServicesSelectableByClient": "",
    },
    "method": "POST",
    "path": "/json/DataRequest",
  },
]
`;

exports[`testing methods Pay 1`] = `
[
  {
    "channel": "Web",
    "data": {
      "AmountDebit": 1,
      "Currency": "EUR",
      "Invoice": "64752550bf1f40",
      "Order": "64752550bf1f40",
      "PushURL": "https://example.com/push",
      "ReturnURL": "https://example.com/return",
      "Services": {
        "ServiceList": [
          {
            "Action": "Pay",
            "Name": "buckaroovoucher",
            "Parameters": [
              {
                "Name": "VoucherCode",
                "Value": "test-voucherCode",
              },
            ],
            "Version": 0,
          },
        ],
      },
      "ServicesSelectableByClient": "",
    },
    "method": "POST",
    "path": "/json/Transaction",
  },
]
`;

exports[`testing methods Refund 1`] = `
[
  {
    "channel": "Web",
    "data": {
      "AmountCredit": 0.01,
      "Currency": "EUR",
      "Description": "Buckaroo Node SDK Refund Transaction Test",
      "Invoice": "64752550bf1f40",
      "OriginalTransactionKey": "test-transactionKey",
      "PushURL": "https://example.com/push",
      "ReturnURL": "https://example.com/return",
      "Services": {
        "ServiceList": [
          {
            "Action": "Refund",
            "Name": "buckaroovoucher",
            "Version": 0,
          },
        ],
      },
      "ServicesSelectableByClient": "",
    },
    "method": "POST",
    "path": "/json/Transaction",
  },
]
`;
